--- a/service-front/app/languages/messages.pot
+++ b/service-front/app/languages/messages.pot
@@ -4942,7 +4942,7 @@ msgid "Yes, it is the same as my address on the paper LPA"
 msgstr ""
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:69
-msgid "No, it is different than my address on the paper LPA"
+msgid "No, it is different to my address on the paper LPA"
 msgstr ""
 
 #: src/Actor/templates/actor/request-activation-key/actor-address.html.twig:73
