--- a/service-front/app/languages/messages.pot
+++ b/service-front/app/languages/messages.pot
@@ -3798,7 +3798,7 @@ msgid "If you remove an LPA from your Use a lasting power of attorney account:"
 msgstr ""
 
 #: src/Actor/templates/actor/confirm-remove-lpa.html.twig:32
-msgid "all access codes you’ve created for that LPA will be cancelled"
+msgid "all access codes you’ve created for this LPA will be valid until they are cancelled or expire"
 msgstr ""
 
 #: src/Actor/templates/actor/confirm-remove-lpa.html.twig:33
@@ -3806,7 +3806,7 @@ msgid "you’ll not be able to see how the LPA is being used or has been used"
 msgstr ""
 
 #: src/Actor/templates/actor/confirm-remove-lpa.html.twig:35
-msgid "you must contact us for a new activation key if you want to add the LPA back to your account"
+msgid "you will need to request a new activation key if you want to add the LPA back to your account"
 msgstr ""
 
 #: src/Actor/templates/actor/confirm-remove-lpa.html.twig:48
