--- a/service-front/app/languages/messages.pot
+++ b/service-front/app/languages/messages.pot
@@ -4532,7 +4532,7 @@ msgstr ""
 #: src/Actor/templates/actor/partials/upcoming-service-downtime.html.twig:9
 #: src/Viewer/templates/viewer/partials/upcoming-service-downtime.html.twig:9
 #: src/Actor/templates/actor/partials/warning-upcoming-service-downtime.html.twig:6
-msgid "This service will be unavailable between 9pm on Friday 31st March 2023 and 9:30am on Saturday 1st April 2023."
+msgid "This service will be unavailable between 2pm  and 3pm on Thursday 27th April 2023."
 msgstr ""
 
 #. Triage page
