--- a/service-front/app/languages/cy/LC_MESSAGES/messages.po
+++ b/service-front/app/languages/cy/LC_MESSAGES/messages.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2023-05-30T14:13:17+00:00\n"
+"POT-Creation-Date: 2023-05-31T12:26:54+00:00\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -7935,7 +7935,7 @@ msgstr ""
 "Gwiriwch yr <abbr title=\"atwrneiaeth arhosol\">LPA</abbr> papur i gael gwybod "
 "pa benderfyniadau y mae’n rhaid eu gwneud ar y cyd."
 
-#: src/Actor/templates/actor/lpa-show-viewercode.html.twig:92
+#: src/Actor/templates/actor/lpa-show-viewercode.html.twig:88
 msgid ""
 "Scanned copies of the donor’s preferences will be shown in the LPA summary. "
 "You should check the scanned image - if it’s not clear, organisations may ask "
@@ -7945,7 +7945,7 @@ msgstr ""
 "Dylech wirio’r ddelwedd sydd wedi ei sganio - os nad yw hi’n glir, gallai "
 "sefydliadau ofyn am gael gweld y fersiwn papur o’r Atwrneiaeth Arhosol."
 
-#: src/Actor/templates/actor/lpa-show-viewercode.html.twig:100
+#: src/Actor/templates/actor/lpa-show-viewercode.html.twig:92
 msgid ""
 "Scanned copies of the donor’s instructions will be shown in the LPA summary. "
 "You should check the scanned image - if it’s not clear, organisations may ask "
@@ -7954,3 +7954,14 @@ msgstr ""
 "Wedi eu sganio o gyfarwyddiadau’r rhoddwr yn y crynodeb o’r Atwrneiaeth "
 "Arhosol. Dylech wirio’r ddelwedd sydd wedi ei sganio - os nad yw hi’n glir, "
 "gallai sefydliadau ofyn am gael gweld y fersiwn papur o’r Atwrneiaeth Arhosol."
+
+#: src/Actor/templates/actor/lpa-show-viewercode.html.twig:100
+msgid ""
+"Scanned copies of the donor’s preferences or instructions will be shown in the "
+"LPA summary. You should check the scanned image - if it’s not clear, "
+"organisations may ask to see the paper LPA."
+msgstr ""
+"Wedi eu sganio o ddewisiadau neu gyfarwyddiadau’r rhoddwr yn y crynodeb o’r "
+"Atwrneiaeth Arhosol. Dylech wirio’r ddelwedd sydd wedi ei sganio - os nad yw "
+"hi’n glir, gallai sefydliadau ofyn am gael gweld y fersiwn papur o’r "
+"Atwrneiaeth Arhosol."
